Fix paste function to phone field.

--- a/src/PDF/pdf.html
+++ b/src/PDF/pdf.html
@@ -40,6 +40,19 @@
             mso-table-lspace: 0pt;
             mso-table-rspace: 0pt;
         }
+        .menu a{
+            color: #6c6c6c;
+            font-size: 14px;
+            font-weight: 400;
+            letter-spacing: 0.28px;
+            text-decoration: none;
+        }
+        .menu td{
+            padding-left: 30px;
+        }
+        .header-td{
+            padding: 40px 0;
+        }
     </style>
 </head>
 
@@ -52,7 +65,7 @@
         <td>
             <table class="main table-850" cellpadding="0" cellspacing="0" width="850" align="center">
                 <tr>
-                    <td headers="30" width="850"></td>
+                    <td height="30" width="850"></td>
                 </tr>
                 <tr>
                     <td class="header-td" bgcolor="#ffffff">
