Fix button active mode by optional fields

--- a/src/PDF/pdf.html
+++ b/src/PDF/pdf.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>HTML Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600"/>
     <style>
         body {
             width: 100% !important;
@@ -40,18 +40,34 @@
             mso-table-lspace: 0pt;
             mso-table-rspace: 0pt;
         }
-        .menu a{
+
+        .menu a {
             color: #6c6c6c;
             font-size: 14px;
             font-weight: 400;
             letter-spacing: 0.28px;
             text-decoration: none;
         }
-        .menu td{
+
+        .menu td {
             padding-left: 30px;
         }
-        .header-td{
+
+        .header-td {
             padding: 40px 0;
+        }
+
+        .features-td {
+            padding-top: 100px;
+            padding-bottom: 30px;
+        }
+
+        .features-td p {
+            color: #8c8c8c;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 26px;
+            letter-spacing: 0.28px;
         }
     </style>
 </head>
@@ -72,17 +88,81 @@
                         <table class="table-600" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr>
                                 <td align="left" class="logo">
-                                    <img src="https://raw.githubusercontent.com/maxdenaro/maxgraph-youtube-source/master/%D0%90%D0%B4%D0%B0%D0%BF%D1%82%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0%20%D0%BF%D0%B8%D1%81%D1%8C%D0%BC%D0%B0%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F%20(email-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0)%20%E2%84%961/bella.png" alt="logo">
+                                    <img src="https://raw.githubusercontent.com/maxdenaro/maxgraph-youtube-source/master/%D0%90%D0%B4%D0%B0%D0%BF%D1%82%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0%20%D0%BF%D0%B8%D1%81%D1%8C%D0%BC%D0%B0%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F%20(email-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0)%20%E2%84%961/bella.png"
+                                         alt="logo">
                                 </td>
                                 <td align="right" class="menu">
                                     <table cellpadding="0" cellspacing="0">
-                                     <tr>
-                                         <td><a href="#" style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">Team</a></td>
-                                         <td><a href="#" style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">Features</a></td>
-                                         <td><a href="#" style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">Pricing</a></td>
-                                         <td><a href="#" style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">Contact</a></td>
-                                     </tr>
+                                        <tr>
+                                            <td><a href="#"
+                                                   style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">Team</a>
+                                            </td>
+                                            <td><a href="#"
+                                                   style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">Features</a>
+                                            </td>
+                                            <td><a href="#"
+                                                   style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">Pricing</a>
+                                            </td>
+                                            <td><a href="#"
+                                                   style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">Contact</a>
+                                            </td>
+                                        </tr>
                                     </table>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="banner-td">
+                        <a href="#">
+                            <img src="https://github.com/maxdenaro/maxgraph-youtube-source/blob/master/%D0%90%D0%B4%D0%B0%D0%BF%D1%82%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0%20%D0%BF%D0%B8%D1%81%D1%8C%D0%BC%D0%B0%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F%20(email-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0)%20%E2%84%961/banner.png?raw=true"
+                                 alt="banner">
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="features-td" bgcolor="#ffffff">
+                        <table class="table-600" cellpadding="0" cellspacing="0" width="600" align="center">
+                            <tr>
+                                <td align="center">
+                                    <img src="https://github.com/maxdenaro/maxgraph-youtube-source/blob/master/%D0%90%D0%B4%D0%B0%D0%BF%D1%82%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0%20%D0%BF%D0%B8%D1%81%D1%8C%D0%BC%D0%B0%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F%20(email-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0)%20%E2%84%961/return.png?raw=true"
+                                         alt="return">
+                                    <p style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">
+                                        phoncus ut, imperdiet vel <br/> venenatis vitae justo ullam <br/> dictum
+                                        felis eu pede
+                                        mollis <br/> pretium massa.
+                                    </p>
+                                    <a href="#">
+                                        <img src="https://github.com/maxdenaro/maxgraph-youtube-source/blob/master/%D0%90%D0%B4%D0%B0%D0%BF%D1%82%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0%20%D0%BF%D0%B8%D1%81%D1%8C%D0%BC%D0%B0%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F%20(email-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0)%20%E2%84%961/read-more.png?raw=true"
+                                             alt="read-more">
+                                    </a>
+                                </td>
+                                <td align="center">
+                                    <img src="https://github.com/maxdenaro/maxgraph-youtube-source/blob/master/%D0%90%D0%B4%D0%B0%D0%BF%D1%82%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0%20%D0%BF%D0%B8%D1%81%D1%8C%D0%BC%D0%B0%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F%20(email-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0)%20%E2%84%961/stopwatch.png?raw=true"
+                                         alt="stopwatch">
+                                    <p style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">
+                                        phoncus ut, imperdiet vel <br/> venenatis vitae justo ullam <br/> dictum
+                                        felis eu pede
+                                        mollis <br/> pretium massa.
+                                    </p>
+                                    <a href="#">
+                                        <img src="https://github.com/maxdenaro/maxgraph-youtube-source/blob/master/%D0%90%D0%B4%D0%B0%D0%BF%D1%82%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0%20%D0%BF%D0%B8%D1%81%D1%8C%D0%BC%D0%B0%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F%20(email-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0)%20%E2%84%961/read-more.png?raw=true"
+                                             alt="stopwatch">
+                                    </a>
+                                </td>
+                                <td align="center">
+                                    <img src="https://github.com/maxdenaro/maxgraph-youtube-source/blob/master/%D0%90%D0%B4%D0%B0%D0%BF%D1%82%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0%20%D0%BF%D0%B8%D1%81%D1%8C%D0%BC%D0%B0%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F%20(email-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0)%20%E2%84%961/reminders.png?raw=true"
+                                         alt="reminders">
+                                    <p style="font-family: Arial, Helvetica, sans-serif, 'Raleway';">
+                                        phoncus ut, imperdiet vel <br/> venenatis vitae justo ullam <br/> dictum
+                                        felis eu pede
+                                        mollis <br/> pretium massa.
+                                    </p>
+                                    <a href="#">
+                                        <img src="https://github.com/maxdenaro/maxgraph-youtube-source/blob/master/%D0%90%D0%B4%D0%B0%D0%BF%D1%82%D0%B8%D0%B2%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0%20%D0%BF%D0%B8%D1%81%D1%8C%D0%BC%D0%B0%20%D1%81%20%D0%BD%D1%83%D0%BB%D1%8F%20(email-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0)%20%E2%84%961/read-more.png?raw=true"
+                                             alt="read-more">
+                                    </a>
                                 </td>
                             </tr>
                         </table>
