--- a/src/PDF/task2.html
+++ b/src/PDF/task2.html
@@ -58,8 +58,70 @@
 
         .info {
             font-size: 12px;
-            line-height: 25px;
+            line-height: 15px;
             font-weight: 400;
+        }
+
+        .table-title {
+            font-size: 16px;
+            line-height: 20px;
+            font-weight: 400;
+        }
+
+        .table-title-bold-td {
+            padding-top: 12px;
+            font-size: 12px;
+            line-height: 15px;
+            font-weight: 700;
+        }
+
+        .table-row {
+            height: 30px;
+            border: 1px solid #000000;
+        }
+
+        .table-row-1 {
+            font-size: 10px;
+            line-height: 13px;
+            width: 39px;
+            text-align: center;
+            padding-bottom: 1px;
+            border-right: 1px solid #000000;
+        }
+
+        .table-row-2 {
+            font-size: 10px;
+            line-height: 13px;
+            width: 350px;
+            padding-left: 14px;
+            padding-bottom: 1px;
+            border-right: 1px solid #000000;
+        }
+
+        .table-row-3 {
+            font-size: 10px;
+            line-height: 13px;
+            width: 45px;
+            padding-left: 15px;
+            padding-bottom: 1px;
+            border-right: 1px solid #000000;
+        }
+
+        .table-row-4 {
+            font-size: 10px;
+            line-height: 13px;
+            width: 51px;
+            padding-left: 15px;
+            padding-bottom: 1px;
+            border-right: 1px solid #000000;
+        }
+
+        .table-row-5 {
+            font-size: 10px;
+            line-height: 13px;
+            width: 51px;
+            padding-left: 15px;
+            padding-bottom: 1px;
         }
     </style>
 </head>
@@ -106,13 +168,174 @@
                             </tr>
                             <tr class="info"
                                 style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
-                                <td align="left">
+                                <td align="left" style="padding-top: 4px">
                                     Bulgaria, 21B Moskova Street Sofia
                                 </td>
-                                <td align="right">
+                                <td align="right" style="padding-top: 4px">
                                     Bulgaria, 24A Moskova Street Sofia
                                 </td>
                             </tr>
+                            <tr class="info"
+                                style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <td align="left" style="padding-top: 4px">
+                                    75008 Sofia, Bulgaria
+                                </td>
+                                <td align="right" style="padding-top: 4px">
+                                    email@gmail.com
+                                </td>
+                            </tr>
+                            <tr class="info"
+                                style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <td align="left" style="padding-top: 4px">
+                                    +1 415 555 1132
+                                </td>
+                                <td align="right" style="padding-top: 4px">
+                                    +33 01 75 11 00 67
+                                </td>
+                            </tr>
+                            <tr class="info"
+                                style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <td align="left" style="padding-top: 4px">
+                                    +1 302 555 1132
+                                </td>
+                            </tr>
+                            <tr class="info"
+                                style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <td align="left" style="padding-top: 4px">
+                                    pupvote@gmail.com
+                                </td>
+                            </tr>
+                            <tr class="info"
+                                style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <td class="info-last-td" align="left" style="padding-top: 4px; padding-bottom: 32px">
+                                    pupvote.com
+                                </td>
+                            </tr>
+                            <table class="container 576" cellpadding="0" cellspacing="0" width="576" align="center">
+                                <tr class="table-title"
+                                    style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                    <td align="center" style="padding-right: 2px;">
+                                        Invoice #045334234551
+                                    </td>
+                                </tr>
+                                <tr class="table-title"
+                                    style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                    <td align="center" style="padding-left: 4px;">
+                                        From Friday, 15 January 2021
+                                    </td>
+                                </tr>
+                                <tr class="table-title-bold-td"
+                                    style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                    <td align="left" style="padding-top: 11px;">
+                                        Vote for Pet
+                                    </td>
+                                </tr>
+                            </table>
+                            <table class="container 576" cellpadding="0" cellspacing="0" width="576" align="center">
+                                <tr style="height: 8px"></tr>
+                                <tr class="table-row" style="font-weight: 700; font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                    <td class="table-row-1">
+                                        #
+                                    </td>
+                                    <td class="table-row-2">
+                                        Name
+                                    </td>
+                                    <td class="table-row-3">
+                                        Price
+                                    </td>
+                                    <td class="table-row-4">
+                                        Quantity
+                                    </td>
+                                    <td class="table-row-5">
+                                        Amount
+                                    </td>
+                                </tr>
+                                <tr class="table-row" style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                    <td class="table-row-1">
+                                        1
+                                    </td>
+                                    <td class="table-row-2">
+                                        Acquiring 100 votes to vote for animals
+                                    </td>
+                                    <td class="table-row-3">
+                                        $1.99
+                                    </td>
+                                    <td class="table-row-4">
+                                        2
+                                    </td>
+                                    <td class="table-row-5">
+                                        $3.98
+                                    </td>
+                                </tr>
+                                <tr class="table-row" style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                    <td class="table-row-1">
+                                        2
+                                    </td>
+                                    <td class="table-row-2">
+                                        Acquiring 300 votes to vote for animals
+                                    </td>
+                                    <td class="table-row-3">
+                                        $4.99
+                                    </td>
+                                    <td class="table-row-4">
+                                        1
+                                    </td>
+                                    <td class="table-row-5">
+                                        $4.99
+                                    </td>
+                                </tr>
+                                <tr class="table-row" style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                    <td class="table-row-1">
+                                        3
+                                    </td>
+                                    <td class="table-row-2">
+                                        Acquiring 500 votes to vote for animals
+                                    </td>
+                                    <td class="table-row-3">
+                                        $5.49
+                                    </td>
+                                    <td class="table-row-4">
+                                        1
+                                    </td>
+                                    <td class="table-row-5">
+                                        $5.49
+                                    </td>
+                                </tr>
+                                <tr class="table-row" style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                    <td class="table-row-1">
+                                        4
+                                    </td>
+                                    <td class="table-row-2">
+                                        Acquiring 1000 votes to vote for animals
+                                    </td>
+                                    <td class="table-row-3">
+                                        $9.99
+                                    </td>
+                                    <td class="table-row-4">
+                                        1
+                                    </td>
+                                    <td class="table-row-5">
+                                        $9.99
+                                    </td>
+                                </tr>
+                                <tr class="table-row" style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                    <td class="table-row-1">
+                                        5
+                                    </td>
+                                    <td class="table-row-2">
+                                        Acquiring 2000 votes to vote for animals
+                                    </td>
+                                    <td class="table-row-3">
+                                        $18.99
+                                    </td>
+                                    <td class="table-row-4">
+                                        1
+                                    </td>
+                                    <td class="table-row-5">
+                                        $18.99
+                                    </td>
+                                </tr>
+                            </table>
                         </table>
                     </td>
                 </tr>
