PDF layout complete.

--- a/src/PDF/task2.html
+++ b/src/PDF/task2.html
@@ -123,6 +123,17 @@
             padding-left: 15px;
             padding-bottom: 1px;
         }
+
+        .bank-requisites-bold {
+            font-size: 12px;
+            line-height: 15px;
+            font-weight: 700;
+        }
+
+        .bank-requisites {
+            font-size: 12px;
+            line-height: 15px;
+        }
     </style>
 </head>
 
@@ -233,7 +244,8 @@
                             </table>
                             <table class="container 576" cellpadding="0" cellspacing="0" width="576" align="center">
                                 <tr style="height: 8px"></tr>
-                                <tr class="table-row" style="font-weight: 700; font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <tr class="table-row"
+                                    style="font-weight: 700; font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
                                     <td class="table-row-1">
                                         #
                                     </td>
@@ -250,7 +262,8 @@
                                         Amount
                                     </td>
                                 </tr>
-                                <tr class="table-row" style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <tr class="table-row"
+                                    style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
                                     <td class="table-row-1">
                                         1
                                     </td>
@@ -267,7 +280,8 @@
                                         $3.98
                                     </td>
                                 </tr>
-                                <tr class="table-row" style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <tr class="table-row"
+                                    style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
                                     <td class="table-row-1">
                                         2
                                     </td>
@@ -284,7 +298,8 @@
                                         $4.99
                                     </td>
                                 </tr>
-                                <tr class="table-row" style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <tr class="table-row"
+                                    style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
                                     <td class="table-row-1">
                                         3
                                     </td>
@@ -301,7 +316,8 @@
                                         $5.49
                                     </td>
                                 </tr>
-                                <tr class="table-row" style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <tr class="table-row"
+                                    style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
                                     <td class="table-row-1">
                                         4
                                     </td>
@@ -318,7 +334,8 @@
                                         $9.99
                                     </td>
                                 </tr>
-                                <tr class="table-row" style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                <tr class="table-row"
+                                    style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
                                     <td class="table-row-1">
                                         5
                                     </td>
@@ -333,6 +350,57 @@
                                     </td>
                                     <td class="table-row-5">
                                         $18.99
+                                    </td>
+                                </tr>
+                                <tr style="height: 20px"></tr>
+                            </table>
+                            <table class="container 576" cellpadding="0" cellspacing="0" width="576" align="center">
+                                <tr>
+                                    <td class="bank-requisites-bold"
+                                        style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro'; width: 431px">
+                                        Bank information
+                                    </td>
+                                    <td class="bank-requisites" align="right"
+                                        style="padding-right: 6px; font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                        Subtotal
+                                    </td>
+                                    <td class="bank-requisites" align="right"
+                                        style="font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                        $43.44
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="bank-requisites"
+                                        style="padding-top: 4px; font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro'; width: 431px">
+                                        Credit Agricole Bank
+                                    </td>
+                                    <td class="bank-requisites" align="right"
+                                        style="padding-top: 4px; padding-right: 6px;  font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                        Tax (10%)
+                                    </td>
+                                    <td class="bank-requisites" align="right"
+                                        style="padding-top: 4px; font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                        $4.35
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="bank-requisites"
+                                        style="padding-top: 4px; font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro'; width: 431px">
+                                        IBAN: FR7630076021301193690023468
+                                    </td>
+                                    <td class="bank-requisites-bold" align="right"
+                                        style="padding-top: 4px; padding-right: 6px;  font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                        Total
+                                    </td>
+                                    <td class="bank-requisites-bold" align="right"
+                                        style="padding-top: 4px; font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro';">
+                                        $47.79
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="bank-requisites"
+                                        style="padding-top: 4px; font-family: Arial, Helvetica, sans-serif, 'Source Sans Pro'; width: 431px">
+                                        SWIFT / BIC:AGRICOLERPP
                                     </td>
                                 </tr>
                             </table>
