--- a/Task2/PDF/task2.html
+++ b/Task2/PDF/task2.html
@@ -153,7 +153,7 @@
                         <table class="container 576" cellpadding="0" cellspacing="0" width="576" align="center">
                             <tr>
                                 <td>
-                                    <img height="44" width="167" src="img/logo-task2.png" alt="logo">
+                                    <img height="44" width="167" src="./img/logo-task2.png" alt="logo">
                                 </td>
                             </tr>
                             <tr>
